--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,10 +1,11 @@
 #video {
-    position: relative;
-    right: 0;
-    bottom: 0;
-    width: 1920px;
-    height: 1080px;
-    /* overflow:hidden; */
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #image {
