Better vertical centering + back button in album.html

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -24,5 +24,7 @@
 
 body {
     cursor: none;
-	user-select: none;
+    user-select: none;
+    display:flex; flex-direction:column; justify-content:center;
+    min-height:100vh;
 }
